firebase deploy complete

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -8,7 +8,7 @@
             <div class="ba-content-info">
                 <p>Explore your Talent through Recreational Activities | Dance, Drama, Music, Arts | Connect with best in Class Mentors</p>
             </div>
-            <a style="text-decoration: none;" href="#workshop-section">
+            <a style="text-decoration: none;" href="">
                 <div class="join-now-btn">
                     <button mat-flat-button color="primary">Start Now</button>
                 </div>
