--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,21 +1,18 @@
 <mat-toolbar class="navbar_container">
-    <mat-toolbar class="toolbar">
-        <!-- <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
-      <mat-icon>menu</mat-icon>
-    </button> -->
-        <!-- <a mat-icon-button class="pelto_logo">
-        <div class="logo_text">Neet Corner</div>
-        </a> -->
-        <span class="menu-spacer"></span>
-        <div>
-            <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-            <a class="navbar_button" mat-button>About Us</a>
-            <a class="navbar_button" [routerLink]="['/test-series']" mat-button>Test Series</a>
-            <a class="navbar_button" mat-button>Youtube Classes</a>
-            <a class="navbar_button" mat-button>Contact Us</a>
-            <!-- <button mat-button (click)="isOpen = !isOpen" type="button" cdkOverlayOrigin #trigger="cdkOverlayOrigin">{{ currentUser?.first_name }}</button> -->
+    <mat-toolbar-row class="toolbar">
+        <div class="toolbar-contents">
+            <a [routerLink]="['/']" mat-icon-button class="pelto_logo">
+                <img class="logo-img" alt="Pelto" src="assets/images/logo2.jpeg" />
+            </a>
+            <!-- <span class="menu-spacer"></span> -->
+            <div class="toolbar-buttons">
+                <a class="navbar_button" mat-button>About Us</a>
+                <a class="navbar_button" [routerLink]="['/test-series']" mat-button>Test Series</a>
+                <a class="navbar_button" mat-button>Youtube Classes</a>
+                <a class="navbar_button" mat-button>Contact Us</a>
+            </div>
         </div>
-        <!-- <button class="navbar_button main_button" mat-button>Login</button> -->
-    </mat-toolbar>
+
+    </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
