about, community, banner

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,22 +1,22 @@
 <!-- <div class="banner-container" fxLayout="row" fxLayoutAlign="space-evenly center"> -->
 <div class="banner-container">
-    <div>
+    <div class="container">
         <div class="ba-content">
-            <div class="ba-content-head">
-                <p>Explore your way</p>
+            <div class="ba-content-head font">
+                <p>Get Top Rank in NEET with Excellent Lectures and Test Series</p>
             </div>
-            <div class="ba-content-info">
+            <!-- <div class="ba-content-info">
                 <p>Explore your Talent through Recreational Activities | Dance, Drama, Music, Arts | Connect with best in Class Mentors</p>
+            </div> -->
+            <div class="join-now-btn">
+                <a style="text-decoration: none;" href="">
+                    <!-- <div class="join-now-btn"> -->
+                    <button mat-flat-button>Enroll Now</button>
+                    <!-- </div> -->
+                </a>
             </div>
-            <a style="text-decoration: none;" href="">
-                <div class="join-now-btn">
-                    <button mat-flat-button color="primary">Start Now</button>
-                </div>
-            </a>
+
 
         </div>
-    </div>
-    <div class="ba-image">
-        <img src="assets/images/banner_image2.png" height="500" alt="approx 541 X 376 size image">
     </div>
 </div>
