--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,4 @@
-<!-- <app-banner></app-banner> -->
-<!-- <app-stats></app-stats> -->
+<app-banner></app-banner>
+<app-stats></app-stats>
+<app-about></app-about>
+<app-community></app-community>
