--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
             <div class="toolbar-buttons">
                 <a class="navbar_button" mat-button>About Us</a>
                 <a class="navbar_button" [routerLink]="['/test-series']" mat-button>Test Series</a>
-                <a class="navbar_button" mat-button>Youtube Classes</a>
+                <a class="navbar_button" href="https://m.youtube.com/channel/UCVgfyO6RnwjGvJ-xPVd2Thw" target="_blank" mat-button>Youtube</a>
                 <a class="navbar_button" mat-button>Contact Us</a>
             </div>
         </div>
