--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -1,1 +1,55 @@
-<h1>stats works!</h1>
+<div class="stats-container">
+    <div class="stats-contents">
+        <div class="stats-element color1">
+
+            <div class="stat-element-container">
+                <fa-icon class="stat-icon" [icon]="faYoutube"></fa-icon>
+
+                <div class="stat-number">150K+</div>
+                <!-- <div class="stat-line"></div> -->
+
+                <div class="stat-name">Youtube Subscribers</div>
+            </div>
+
+        </div>
+        <div class="stats-element color2">
+
+            <div class="stat-element-container">
+                <fa-icon class="stat-icon" [icon]="faUserCheck"></fa-icon>
+
+                <div class="stat-number">2K+</div>
+                <!-- <div class="stat-line"></div> -->
+
+                <div class="stat-name">Active Students</div>
+            </div>
+
+        </div>
+        <div class="stats-element color3">
+
+            <div class="stat-element-container">
+                <fa-icon class="stat-icon" [icon]="faPhone"></fa-icon>
+
+                <div class="stat-number">24 hrs</div>
+                <!-- <div class="stat-line"></div> -->
+
+                <div class="stat-name">Student Support</div>
+            </div>
+
+        </div>
+        <div class="stats-element color4">
+
+            <div class="stat-element-container">
+                <fa-icon class="stat-icon" [icon]="faUserGraduate"></fa-icon>
+
+                <div class="stat-number">200K+</div>
+                <!-- <div class="stat-line"></div> -->
+
+                <div class="stat-name">Students Taught</div>
+            </div>
+
+        </div>
+
+
+    </div>
+
+</div>
