--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -1,25 +1,28 @@
 .banner-container {
     display: flex;
-    margin: 0px 0px 0px 120px;
+    // margin: 0px 0px 0px 120px;
     align-items: center;
+    background-image: url('/assets/images/banner-img.jpg');
+    background-repeat: no-repeat;
+    // background-attachment: fixed;
+    background-size: 100%;
+    height: 580px;
+}
+
+.container {
+    // width: 400px;
+    margin-left: 11%;
+    margin-right: 45%;
+    // padding-top: 13%;
 }
 
 .ba-content-head {
-    line-height: 34px;
-    padding-left: 1rem;
-    text-align: left;
-    color: #21243d;
-    font-size: 40px;
-    font-family: "Sora", sans-serif;
-}
-
-.ba-content-info {
-    text-align: left;
-    line-height: 26px;
+    line-height: 54px;
+    // padding-left: 1rem;
+    // text-align: left;
     color: #476176;
-    font-size: 19px;
-    padding: 1rem;
-    font-family: "Noto Sans JP", sans-serif;
+    // color: #21243d;
+    font-size: 40px;
 }
 
 .ba-image {
@@ -27,7 +30,13 @@
 }
 
 .join-now-btn {
-    padding-left: 1rem;
+    margin-top: 4%;
+}
+
+.mat-flat-button {
+    background-color: #1756BD;
+    font-family: "Sora", sans-serif;
+    color: #fff;
 }
 
 @media only screen and (max-width: 950px) {
