--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,5 +1,5 @@
 <!-- <div class="banner-container" fxLayout="row" fxLayoutAlign="space-evenly center"> -->
-<div class="banner-container">
+<div class="banner-container banner-section">
     <div class="container">
         <div class="ba-content">
             <div class="ba-content-head font">
