--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -1,4 +1,4 @@
-<div class="community-container">
+<div class="community-container community-section">
     <div class="left">
         <div class="title">Our Community</div>
         <div class="content">Stay connected with our community and read our news feed, blog and social media to keep informed on news about the academy as it is happening.</div>
@@ -27,4 +27,4 @@
                 alt="pic">
         </div>
     </div>
-</div>s
+</div>
