--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,70 @@
-<p>footer works!</p>
+<footer id="footer" class="footer-section">
+    <section class="ft-main">
+        <div class="ft-main-item">
+            <a [routerLink]="['/']" mat-icon-button class="brand-image">
+                <img width="80px" alt="Neet korner" src="assets/images/logo2.jpeg">
+            </a>
+            <div class="icons">
+                <a target="_blank" href="https://www.facebook.com/drslokchemistry/" class="single-icon">
+                    <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+                </a>
+                <a target="_blank" href="https://www.instagram.com/visheshparashri/" class="single-icon">
+                    <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                </a>
+                <a target="_blank" href="https://www.youtube.com/channel/UCVgfyO6RnwjGvJ-xPVd2Thw" class="single-icon">
+                    <i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i>
+                </a>
+                <a target="_blank" href="https://mobile.twitter.com/DrParashri?s=09" class="single-icon">
+                    <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+                </a>
+            </div>
+            <a href="https://play.google.com/store/apps/details?id=co.lynde.soyyi" target="_blank" mat-icon-button class="brand-image">
+                <img width="167px" class="img" alt="Neet korner" src="assets/images/get-it-on.png">
+            </a>
+        </div>
+        <div class="ft-main-item">
+            <h2 class="ft-title">Links</h2>
+            <ul>
+                <li>
+                    <a href="">About us</a>
+                </li>
+                <li>
+                    <a href="">Test Series</a>
+                </li>
+                <li>
+                    <a href="">Our Community</a>
+                </li>
+                <li>
+                    <a href="">Youtube Channel</a>
+                </li>
+                <li>
+                    <a href="">Achievements</a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://www.termsandconditionsgenerator.com/live.php?token=aiINAjPUvLImn4Zua4iH8NpKWJ3Rl7HQ">Terms and Conditions</a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://www.privacypolicygenerator.info/live.php?token=1vT4lmY93qgu3YIPQAdoproJXFxY6mKr">Privacy policy</a>
+                </li>
+            </ul>
+            <div class="copyright">&copy; 2020 Copyright Neet Korner</div>
+
+        </div>
+        <div class="ft-main-item">
+            <h2 class="ft-title">Contact</h2>
+            <ul>
+                <li>
+                    <a href="tel:+91-9519416040">
+                        <mat-icon inline=true>call</mat-icon> +91-9519416040</a>
+                </li>
+                <li>
+                    <a href="mailto:neetkorner@gmail.com">
+                        <mat-icon inline=true>mail</mat-icon> neetkorner@gmail.com</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="ft-legal">
+    </section>
+</footer>
