--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -1,4 +1,4 @@
-<div class="stats-container">
+<div class="stats-container stats-section">
     <div class="stats-contents">
         <div class="stats-element color1">
 
@@ -17,7 +17,7 @@
             <div class="stat-element-container">
                 <fa-icon class="stat-icon" [icon]="faUserCheck"></fa-icon>
 
-                <div class="stat-number">2K+</div>
+                <div class="stat-number">50K+</div>
                 <!-- <div class="stat-line"></div> -->
 
                 <div class="stat-name">Active Students</div>
