--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,13 +15,7 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.subheading {
-    text-align: center;
-    font-size: 30px;
-    // font-family: 'Sora', sans-serif;
-    font-family: "PT Sans Narrow", sans-serif;
-    font-weight: 700;
-}
+.subheading {}
 
 .normal-heading {
     font-weight: 900;
