--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -1,4 +1,4 @@
-<div class="community-container community-section">
+<div class="community-container" id="community-section">
     <div class="title">Our Community</div>
     <div class="container">
         <div class="left">
