--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,19 +26,19 @@
             <h2 class="ft-title">Links</h2>
             <ul>
                 <li>
-                    <a href="">About us</a>
+                    <a pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="about-section">About us</a>
                 </li>
                 <li>
-                    <a href="">Test Series</a>
+                    <a pageScroll [pageScrollDuration]="200" [routerLink]="['/test-series']" fragment="test-section">Test Series</a>
                 </li>
                 <li>
-                    <a href="">Our Community</a>
+                    <a pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="community-section">Our Community</a>
                 </li>
                 <li>
-                    <a href="">Youtube Channel</a>
+                    <a href="https://m.youtube.com/channel/UCVgfyO6RnwjGvJ-xPVd2Thw" target="_blank">Youtube Channel</a>
                 </li>
                 <li>
-                    <a href="">Achievements</a>
+                    <a pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="stats-section">Achievements</a>
                 </li>
                 <li>
                     <a target="_blank" href="https://www.termsandconditionsgenerator.com/live.php?token=aiINAjPUvLImn4Zua4iH8NpKWJ3Rl7HQ">Terms and Conditions</a>
