--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -1,4 +1,4 @@
-<div class="stats-container stats-section">
+<div class="stats-container" id="stats-section">
     <div class="stats-contents">
         <div class="stats-element color1">
 
