--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div id="about-section" class="about-section">
+<div id="about-section">
     <h2 class="subheading">ABOUT US</h2>
     <div class="about-container" id="aboutPara">
         <div class="left">
