--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -14,10 +14,12 @@ ul {
 footer {
     font-family: "Noto Sans JP", sans-serif;
     background-color: #f7f7f7;
-    // background-color: #E4E8E7;
-    // background-color: #F9FBFF;
     color: #476176;
     line-height: 1.5;
+    // position: relative;
+    // left: 0;
+    // bottom: 0;
+    // width: 100%;
 }
 
 footer a {
@@ -63,29 +65,6 @@ body {
 .ft-main-item {
     padding: 1.25rem;
     min-width: 12.5rem;
-}
-
-
-/* Footer main | Newsletter form */
-
-form {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-input[type="email"] {
-    border: 0;
-    padding: 0.625rem;
-    margin-top: 0.3125rem;
-}
-
-input[type="submit"] {
-    background-color: #00d188;
-    // color: #fff;
-    cursor: pointer;
-    border: 0;
-    padding: 0.625rem 0.9375rem;
-    margin-top: 0.3125rem;
 }
 
 
