--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,73 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
-// @import url("https://fonts.googleapis.com/css2?family=Sora:wght@600&display=swap");
-// //*********************************************
-// .navbar_container {
-//     background-color: #fff;
-//     overflow: hidden;
-//     // border: 1px solid #1B365D;
-//     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 2px 1px rgba(0, 0, 0, 0.04), 0px 1px 5px rgba(0, 0, 0, 0.08);
-//     // position: fixed;
-//     margin-bottom: 2px;
-//     z-index: 6;
-// }
-// .navbar_button {
-//     color: #476176;
-// }
-// // .logo_text {
-// //     font-weight: bolder;
-// //     font-size: 35px;
-// //     color: #2597d5;
-// //     font-family: "Sora", sans-serif;
-// // }
-// // .main_button {
-// //     border: 1px solid #2597d5;
-// //     border-radius: 6px;
-// //     color: #2597d5;
-// // }
-// .menu-spacer {
-//     flex: 1 1 auto;
-// }
-// .toolbar {
-//     height: 70px;
-//     background-color: #fff;
-//     // align-items: flex-start;
-// }
-// .mat-button {
-//     font-size: 15px;
-//     font-weight: 370;
-//     font-family: "Noto Sans JP", sans-serif;
-// }
-// // .fab {
-// //     position: fixed;
-// //     bottom: 1rem;
-// //     right: 1rem;
-// //     z-index: 5;
-// // }
-// // .fab-button {
-// //     background-color: #00c600;
-// //     &::ng-deep .mat-button-wrapper {
-// //         display: contents;
-// //     }
-// // }
-// // .example-list {
-// //     width: 100px;
-// //     border: solid 1px #ccc;
-// //     border-radius: 5px;
-// //     background: #fff;
-// //     text-align: center;
-// //     padding: 10px;
-// //     margin: 0;
-// // }
-// // .example-list>li {
-// //     list-style-type: none;
-// //     border-bottom: solid 1px #8b8b8b;
-// //     padding: 8px 0;
-// //     cursor: pointer;
-// // }
-// // .example-list>li:last-child {
-// //     border-bottom: none;
-// // }
 .navbar_container {
     background-color: #fff;
     overflow: hidden;
@@ -121,33 +51,19 @@
     font-family: "Noto Sans JP", sans-serif;
 }
 
-// .fab {
-//     position: fixed;
-//     bottom: 1rem;
-//     right: 1rem;
-//     z-index: 5;
-// }
-// .fab-button {
-//     background-color: #00c600;
-//     &::ng-deep .mat-button-wrapper {
-//         display: contents;
-//     }
-// }
-// .example-list {
-//     width: 100px;
-//     border: solid 1px #ccc;
-//     border-radius: 5px;
-//     background: #fff;
-//     text-align: center;
-//     padding: 10px;
-//     margin: 0;
-// }
-// .example-list>li {
-//     list-style-type: none;
-//     border-bottom: solid 1px #8b8b8b;
-//     padding: 8px 0;
-//     cursor: pointer;
-// }
-// .example-list>li:last-child {
-//     border-bottom: none;
-// }
+.sidenav-content {
+    display: flex;
+    flex-direction: column;
+}
+
+@media only screen and (max-width: 601px) {
+    .menu {
+        margin-top: 20px;
+    }
+    .toolbar-buttons {
+        display: none;
+    }
+    .logo-img {
+        margin-left: -40px;
+    }
+}
