--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="navbar_container">
+<mat-toolbar class="navbar_container" id="navbar-section">
     <mat-toolbar-row class="toolbar">
         <div class="toolbar-contents">
             <button mat-icon-button (click)="sidenav.toggle()" class="menu" fxShow="true" fxHide.gt-xs><mat-icon>menu</mat-icon></button>
