--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -6,8 +6,8 @@
                 <p>Get Top Rank in NEET with Excellent Lectures and Test Series</p>
             </div>
             <div class="join-now-btn">
-                <a style="text-decoration: none;" href="">
-                    <button mat-flat-button>Enroll Now</button>
+                <a style="text-decoration: none;" target="_blank" href="https://play.google.com/store/apps/details?id=co.lynde.soyyi">
+                    <button mat-flat-button>Download our app</button>
                 </a>
             </div>
         </div>
