--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,9 +2,9 @@
     <h2 class="subheading">ABOUT US</h2>
     <div class="about-container" id="aboutPara">
         <div class="left">
-            <div class="text"> Dr. Vishesh Parashri had completed his UG degree from IMS BHU and currently working as doctor at S.S Hospital, IMS BHU. He teaches chemistry for XI -XII/ NEET/AIIMS/IIT JEE Examination since 2015 and is very passionate about his teaching.
-                Vishesh sir believe that everyone has the right to educate whether he/she is from city or from small town. On Neet Korner app you will get complete chemistry courses for Class XI - XII(NEET/AIIMS/IIT JEE). We provide a quality content
-                in the form of live classes, offline video lectures, notes, assignments and weekly test series for complete preparation of your exam.</div>
+            <div class="text"> Dr. Vishesh Parashri had completed his UG degree from IMS BHU and currently working as doctor at S.S Hospital, IMS BHU. He has been teaching chemistry for XI -XII/ NEET/AIIMS/IIT JEE Examination since 2015 and is very passionate about his
+                teaching. Vishesh sir believes that everyone has the right to educate whether he/she is from a city or from a small town. On Neet Korner app you will get complete chemistry courses for Class XI - XII(NEET/AIIMS/IIT JEE). We provide quality
+                content in the form of live classes, offline video lectures, notes, assignments and weekly test series for complete preparation of your exam.</div>
         </div>
         <div class="right">
             <div class="about-image">
