--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,14 +16,14 @@
     </mat-toolbar-row>
 </mat-toolbar>
 
-<mat-sidenav-container color="primary">
+<mat-sidenav-container>
     <mat-sidenav #sidenav>
         <mat-nav-list class="sidenav-content">
             <a (click)="sidenav.toggle()" pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="about-section" class="navbar_button" mat-button>About Us</a>
             <a (click)="sidenav.toggle()" [routerLink]="['/test-series']" class="navbar_button" mat-button>Test Series</a>
             <a (click)="sidenav.toggle()" href="https://m.youtube.com/channel/UCVgfyO6RnwjGvJ-xPVd2Thw" target="_blank" class="navbar_button" mat-button>Youtube</a>
             <a (click)="sidenav.toggle()" pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="footer-section" class="navbar_button" pageScroll [pageScrollDuration]="400" href="#footer" class="navbar_button" mat-button>Contact Us</a>
-            <a (click)="sidenav.toggle()" mat-button><span class="material-icons">menu_open</span></a>
+            <!-- <a (click)="sidenav.toggle()" mat-button class="navbar-button"><span class="material-icons">menu_open</span></a> -->
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
