--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -50,7 +50,7 @@
             <div class="copyright">&copy; 2020 Copyright Neet Korner</div>
 
         </div>
-        <div class="ft-main-item">
+        <div class="ft-main-item" id="contact-section">
             <h2 class="ft-title">Contact</h2>
             <ul>
                 <li>
