--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <app-banner></app-banner>
+<app-courses></app-courses>
 <app-about></app-about>
 <app-stats></app-stats>
 <app-community></app-community>
