courses section update1

--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,17 +1,19 @@
 <div class="courses-section">
     <div class="courses-container">
-        <h1 class="title">Neet Courses</h1>
+        <h1 class="title">NEET COURSES</h1>
         <div class="all-courses">
             <div class="single-course">
                 <a href="">
                     <mat-card class="card-container">
                         <div class="card-img">
-                            <img mat-card-image src="" alt="">
+                            <img mat-card-image src="assets/images/courses/droppers.jpeg" alt="">
                         </div>
 
-                        <mat-card-title class="card-title">Neet Droppers Batch</mat-card-title>
+                        <mat-card-title class="card-title"> Chemistry Course for Neet Droppers</mat-card-title>
 
-                        <mat-card-content class="content"></mat-card-content>
+                        <mat-card-content class="content">
+                            <div class="teacher">Dr. Slok Sir</div>
+                        </mat-card-content>
                     </mat-card>
                 </a>
             </div>
@@ -19,12 +21,14 @@
                 <a href="">
                     <mat-card class="card-container">
                         <div class="card-img">
-                            <img mat-card-image src="" alt="">
+                            <img mat-card-image src="assets/images/courses/droppers.jpeg" alt="">
                         </div>
 
-                        <mat-card-title class="title">Neet Droppers Batch</mat-card-title>
+                        <mat-card-title class="card-title"> Chemistry Course for Neet Droppers</mat-card-title>
 
-                        <mat-card-content class="content"></mat-card-content>
+                        <mat-card-content class="content">
+                            <div class="teacher">Dr. Slok Sir</div>
+                        </mat-card-content>
                     </mat-card>
                 </a>
             </div>
@@ -32,12 +36,14 @@
                 <a href="">
                     <mat-card class="card-container">
                         <div class="card-img">
-                            <img mat-card-image src="" alt="">
+                            <img mat-card-image src="assets/images/courses/droppers.jpeg" alt="">
                         </div>
 
-                        <mat-card-title class="title">Neet Droppers Batch</mat-card-title>
+                        <mat-card-title class="card-title"> Chemistry Course for Neet Droppers</mat-card-title>
 
-                        <mat-card-content class="content"></mat-card-content>
+                        <mat-card-content class="content">
+                            <div class="teacher">Dr. Slok Sir</div>
+                        </mat-card-content>
                     </mat-card>
                 </a>
             </div>
@@ -45,67 +51,19 @@
                 <a href="">
                     <mat-card class="card-container">
                         <div class="card-img">
-                            <img mat-card-image src="" alt="">
+                            <img mat-card-image src="assets/images/courses/droppers.jpeg" alt="">
                         </div>
 
-                        <mat-card-title class="title">Neet Droppers Batch</mat-card-title>
+                        <mat-card-title class="card-title"> Chemistry Course for Neet Droppers</mat-card-title>
 
-                        <mat-card-content class="content"></mat-card-content>
+                        <mat-card-content class="content">
+                            <div class="teacher">Dr. Slok Sir</div>
+                        </mat-card-content>
                     </mat-card>
                 </a>
             </div>
-            <div class="single-course">
-                <a href="">
-                    <mat-card class="card-container">
-                        <div class="card-img">
-                            <img mat-card-image src="" alt="">
-                        </div>
 
-                        <mat-card-title class="title">Neet Droppers Batch</mat-card-title>
 
-                        <mat-card-content class="content"></mat-card-content>
-                    </mat-card>
-                </a>
-            </div>
-            <div class="single-course">
-                <a href="">
-                    <mat-card class="card-container">
-                        <div class="card-img">
-                            <img mat-card-image src="" alt="">
-                        </div>
-
-                        <mat-card-title class="title">Neet Droppers Batch</mat-card-title>
-
-                        <mat-card-content class="content"></mat-card-content>
-                    </mat-card>
-                </a>
-            </div>
-            <div class="single-course">
-                <a href="">
-                    <mat-card class="card-container">
-                        <div class="card-img">
-                            <img mat-card-image src="" alt="">
-                        </div>
-
-                        <mat-card-title class="title">Neet Droppers Batch</mat-card-title>
-
-                        <mat-card-content class="content"></mat-card-content>
-                    </mat-card>
-                </a>
-            </div>
-            <div class="single-course">
-                <a href="">
-                    <mat-card class="card-container">
-                        <div class="card-img">
-                            <img mat-card-image src="" alt="">
-                        </div>
-
-                        <mat-card-title class="title">Neet Droppers Batch</mat-card-title>
-
-                        <mat-card-content class="content"></mat-card-content>
-                    </mat-card>
-                </a>
-            </div>
         </div>
 
 
