--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -44,7 +44,10 @@
                     <a target="_blank" href="https://www.termsandconditionsgenerator.com/live.php?token=aiINAjPUvLImn4Zua4iH8NpKWJ3Rl7HQ">Terms and Conditions</a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://www.privacypolicygenerator.info/live.php?token=1vT4lmY93qgu3YIPQAdoproJXFxY6mKr">Privacy policy</a>
+                    <a target="_blank" href="https://www.privacypolicygenerator.info/live.php?token=1vT4lmY93qgu3YIPQAdoproJXFxY6mKr">Privacy Policy</a>
+                </li>
+                <li>
+                    <a pageScroll [pageScrollDuration]="0" [routerLink]="['/refund-policy']" fragment="navbar-section">Refund Policy</a>
                 </li>
             </ul>
             <div class="copyright">&copy; 2020 Copyright Neet Korner</div>
