--- a/src/app/courses/courses-page/courses-page.component.html
+++ b/src/app/courses/courses-page/courses-page.component.html
@@ -1,4 +1,4 @@
-<div class="ws-section">
+<!-- <div class="ws-section">
     <div class="login-wrapper" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutAlign="space-around">
         <div class="left-part" fxFlex="67" fxLayout="column" fxLayoutAlign="start start">
             <div class="img_box">
@@ -65,4 +65,4 @@
         </div>
     </div>
     <br><br>
-</div>
+</div> -->
