--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -29,7 +29,7 @@
                     <a pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="about-section">About us</a>
                 </li>
                 <li>
-                    <a pageScroll [pageScrollDuration]="200" [routerLink]="['/test-series']" fragment="navbar-section">Test Series</a>
+                    <a pageScroll [pageScrollDuration]="200" [routerLink]="['/test-series']" fragment="navbar-section">Online Test</a>
                 </li>
                 <li>
                     <a pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="community-section">Our Community</a>
