--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,21 +4,23 @@
     <mat-card class="example-card">
         <br>
         <mat-card-content>
-            <form>
-                <label for="username" class="login-label">Username</label><br>
-                <input matInput type="text" name="username" class="login-input" [(ngModel)]="username"><br><br>
+            <form method="post" action="https://www.mylearninggraph.com/vendor/b2b-login.php" method="post" enctype="multipart/form-data">
+                <div class="row">
+                    <input type="hidden" name="action" id="action" value="login">
+                    <input type="hidden" name="referrer" id="referrer" value="login">
+                </div>
+                <label for="username" class="login-label">UserID</label><br>
+                <input matInput type="text" class="form-control" name="email" class="login-input" required><br><br>
 
                 <label for="password" class="login-label">Password</label><br>
-                <input matInput type="password" name="password" class="login-input" [(ngModel)]="password"><br>
-                <div class="wrong-message">{{result}}</div>
+                <input matInput type="password" class="form-control" name="password" class="login-input" required><br>
             </form>
         </mat-card-content>
         <br>
 
-        <button mat-raised-button class="login-button" (click)="loginUser()">Login</button>
-
-        <!-- <input type="submit" value="login" (click)="loginUser()"> -->
+        <button mat-raised-button class="login-button" type="submit">Login</button>
 
     </mat-card>
 
 </div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
