--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
             </a>
             <div class="toolbar-buttons">
                 <a pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="about-section" class="navbar_button" mat-button>About Us</a>
-                <a class="navbar_button" [routerLink]="['/test-series']" mat-button>Test Series</a>
+                <a class="navbar_button" [routerLink]="['/test-series']" mat-button>Online Test</a>
                 <a class="navbar_button" href="https://m.youtube.com/channel/UCVgfyO6RnwjGvJ-xPVd2Thw" target="_blank" mat-button>Youtube</a>
                 <a pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="footer-section" class="navbar_button" pageScroll [pageScrollDuration]="400" href="#contact-section" class="navbar_button" mat-button>Contact Us</a>
             </div>
@@ -20,7 +20,7 @@
     <mat-sidenav #sidenav>
         <mat-nav-list class="sidenav-content">
             <a (click)="sidenav.toggle()" pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="about-section" class="navbar_button" mat-button>About Us</a>
-            <a (click)="sidenav.toggle()" [routerLink]="['/test-series']" class="navbar_button" mat-button>Test Series</a>
+            <a (click)="sidenav.toggle()" [routerLink]="['/test-series']" class="navbar_button" mat-button>Online Test</a>
             <a (click)="sidenav.toggle()" href="https://m.youtube.com/channel/UCVgfyO6RnwjGvJ-xPVd2Thw" target="_blank" class="navbar_button" mat-button>Youtube</a>
             <a (click)="sidenav.toggle()" pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="footer-section" class="navbar_button" pageScroll [pageScrollDuration]="400" href="#contact-section" class="navbar_button" mat-button>Contact Us</a>
             <!-- <a (click)="sidenav.toggle()" mat-button class="navbar-button"><span class="material-icons">menu_open</span></a> -->
